<?xml version="1.0"?>
<package format="2">
  <name>medlab_common</name>
  <version>0.0.1</version>
  <description>Contains libraries used by other MedLab ROS packages</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="remireaa@todo.todo">remireaa</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

<!--  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
